dnl Process this file with autoconf to produce a configure script.
AC_INIT(cpplib.c)
AM_INIT_AUTOMAKE(cpp,0.1)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LEX

dnl Checks for libraries.
AC_CHECK_LIB(popt, poptGetArg)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strtod strtol strtoul)

AC_OUTPUT(Makefile)
